trybuild_tests/tests/trybuild/fail/fieldtype_hybrid_tuple.rs
use butane::FieldType;
use serde::{Deserialize, Serialize};

// This should fail - deriving FieldType on tuple struct with named fields
#[derive(Deserialize, FieldType, Serialize)]
struct Hybrid(i32, name: String);

fn main() {}
